fixed list-container to stretch container height

--- a/src/index.sass
+++ b/src/index.sass
@@ -54,9 +54,11 @@ h3
 
 .container
   display: flex
+  align-items: flex-start
   margin: 0 4px
   overflow-x: auto
   overflow-y: hidden
+  height: calc( 100vh - 84px)
   max-height: calc( 100vh - 84px)
   &::-webkit-scrollbar
     width: 8px
@@ -77,7 +79,7 @@ h3
   border-radius: 3px
   width: 272px
   min-width: 272px
-  height: 100%
+  height: auto
   display: flex
   flex-direction: column
   background-color: #ebecf0
